@@ -1,3 +1,10 @@
+23-Oct-2003 by Matthias Braun
+-make dedicated server start automatic. Only the configuration file is read, no
+ need interactively do settings anymore.
+-Documented dedicated server settings in README file
+-Changed exception class to inherid from std::exception
+-fixed signal handler to really shutdown the app
+
 22-Oct-2003 by Ivo Danihelka
 -split GameManager to BotGameManager, DedicatedGameManager
  and PlayerGameManager
